One more time security changes